crates/plotnik-tests/tests/03-analyze/empty_constructs/nested_empty_alternation.txt
Q = (foo [])
------------------ DIAGNOSTICS -------------------
error: empty `[]` matches nothing
 --> query.ptk:1:10
  |
1 | Q = (foo [])
  |          ^^
  |
help: alternations must contain at least one alternative
-------------------- SYMBOLS ---------------------
